specs: closed-loop spec (agent fix handoff M12.4 + Mongoose server link M18); archive shipped work
- spec-closed-loop.md: Part A agent handoff launcher (brief file, launch templates,
  git-hygiene contract), Part B server link (tiered capabilities, assistant fence,
  ops journal, localhost-only v1), composition + delivery order + open questions
- tracker: M17/R13/AV archived to completed/tracker.md; M12 gains M12.4; new M18;
  stale delivery order replaced with post-1.0.0 order; two new resolved decisions
- moved improvements.md (archived notes) and overview.md (original brief) to completed/

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>